samples/_failures_safe/1761564603_9b4ea8_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_cbc39261.c: In function ‘main’:
./samples/SAFE/__tmp_cbc39261.c:163:5: error: expected expression at end of input
  163 |     if (strlen(input) == 0)
      |     ^~
./samples/SAFE/__tmp_cbc39261.c:163:5: error: expected declaration or statement at end of input
